--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "koa": "^2.11.0",
     "koa-router": "^8.0.8",
     "koa-session": "^5.13.1",
+    "mongoose": "^5.9.2",
     "next": "^9.2.2",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5",
     "store-js": "^2.0.4"
   }
 }
